--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,12 @@
 
     width: 100%;
     height: 100%;
-    background-image: url("/images/appearance-BG.png");
+
+    background-image: url("/images/HomeBackGround.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 .container1 {
@@ -28,7 +33,6 @@
     column-gap: 80px;
     height: 100%;
     width: 100%;
-
 
 
 }
@@ -49,61 +53,15 @@ header {
     padding: 10px 2%;
 
     width: 100%;
-    height: 61px;
+    height: 45px;
     left: 0px;
     top: 0px;
-    border-bottom: 1px solid #BFABEA;
     background: linear-gradient(105.6deg, rgba(142, 15, 160, 0.07) 0%, rgba(148, 226, 251, 0.17) 100%);
 
 
 
 }
 
-.emersive-header {
-    position: absolute;
-    left: 1%;
-    right: 16.3%;
-    top: 5%;
-    background: radial-gradient(50.05% 49.92% at 50.31% 47.52%, #FFFFFF 0%, #E0D2FF 1%, #BB9CFF 3%, #9C6FFF 5%, #844CFF 7%, #7333FF 9%, #6924FF 10%, #651FFF 11%, rgba(90, 28, 227, 0.89) 16%, rgba(69, 21, 174, 0.68) 25%, rgba(51, 16, 128, 0.5) 34%, rgba(35, 11, 88, 0.35) 44%, rgba(22, 7, 56, 0.22) 54%, rgba(12, 4, 31, 0.12) 64%, rgba(5, 2, 14, 0.05) 75%, rgba(1, 0, 3, 0.01) 87%, rgba(0, 0, 0, 0) 100%);
-    background-blend-mode: screen;
-    mix-blend-mode: screen;
-
-}
-
-.h_decoration {
-
-    position: absolute;
-    left: 35%;
-    right: 34.18%;
-    top: -1%;
-    bottom: 85.46%;
-
-    background-blend-mode: screen;
-
-
-    z-index: -1;
-}
-
-.h2_decoration {
-    position: absolute;
-    left: 35%;
-    right: 33.59%;
-    top: -1%;
-    bottom: 84.6%;
-    background-blend-mode: screen;
-    z-index: -1;
-}
-
-.h3_decoration {
-    position: absolute;
-    left: 35%;
-    right: 33.59%;
-    top: 6%;
-    bottom: 84.6%;
-    background-blend-mode: screen;
-
-    z-index: -1;
-}
 
 .rectangle_bg {
     position: absolute;
@@ -125,12 +83,14 @@ header {
 .nav_links li {
     display: inline-block;
     padding: 0px 20px;
+    margin-left: 5px;
+
     cursor: pointer;
 }
 
 .nav_link1 li {
     display: inline-block;
-    padding: 0px 20px;
+    padding: 0px 10px;
     cursor: pointer;
 }
 
@@ -152,15 +112,17 @@ header {
 }
 
 .card {
-    background-image: url("/images/Mask\ group.png");
-    padding: 10px;
+    background-image: url("/images/Group3.png.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     padding-left: 30px;
     padding-top: 70px;
-    width: 90%;
-    height: 68%;
-    margin-top: 4%;
-    margin-left: 5%;
-    border-radius: 10px;
+    width: 100%;
+    height: 60%;
+    margin-top: 2%;
+
+
 
 }
 
@@ -170,6 +132,7 @@ header {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: inline-block;
     color: #fff;
+    margin-left: 10%;
 
 }
 
@@ -178,7 +141,7 @@ header {
     width: 20%;
     color: black;
     height: 10%;
-    margin-left: 75%;
+    margin-left: 72%;
     position: relative;
     bottom: 90px;
 
@@ -231,7 +194,7 @@ header {
 }
 
 .card1 {
-    background-image: url("/images/1_0.png");
+    background-image: url("/images/LowerBoxLeft.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -241,7 +204,7 @@ header {
     padding-top: 70px;
     width: 43%;
     height: auto;
-    margin-top: 2%;
+    margin-bottom: 8%;
 
 
 }
@@ -259,8 +222,8 @@ header {
     background: linear-gradient(rgba(0, 40, 83, 80) .1%, rgb(23, 63, 122, 0.3) 0%);
     background-blend-mode: screen;
     width: 300px;
-    height: auto;
-    margin-top: 20%;
+    height: 30%;
+    margin-top: 15%;
 }
 
 .card_time1 h3 {
@@ -282,7 +245,9 @@ header {
 
     cursor: pointer;
     height: 40px;
-    margin-bottom: 10px;
+    position: relative;
+    bottom: 70px;
+    padding-left: 120px;
 }
 
 .points2 {
@@ -291,8 +256,8 @@ header {
     height: 40px;
     float: right;
     position: relative;
-    bottom: 290px;
-    right: 50px;
+    bottom: 250px;
+
 
 
 }
@@ -303,8 +268,8 @@ header {
     height: 40px;
     float: right;
     position: relative;
-    bottom: 270px;
-    right: 50px;
+    bottom: 250px;
+
 
 
 }
@@ -312,7 +277,7 @@ header {
 
 
 .card2 {
-    background-image: url("/images/box2.png");
+    background-image: url("/images/LowerBoxRight.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -322,7 +287,7 @@ header {
     padding-top: 70px;
     width: 43%;
     height: auto;
-    margin-top: 2%;
+    margin-bottom: 8%;
 }
 
 .card2 h1 {
@@ -360,6 +325,8 @@ header {
 
     padding: 10px;
 }
+
+@media (max-width:1370px) {}
 
 @media (max-width:1264px) {
 
@@ -459,6 +426,16 @@ header {
         left: 1%;
     }
 
+    .card {
+        background-position: center;
+        background-size: 550px;
+    }
+
+    .card h1 {
+
+        font-size: 10px;
+    }
+
     .points {
         position: relative;
         top: 8%;
@@ -468,7 +445,6 @@ header {
 
     .nav_links li a {
         font-size: 8px;
-
 
     }
 
@@ -484,7 +460,6 @@ header {
         margin-top: 25%;
 
     }
-
 
 
     .card_time1 h3 {
@@ -522,10 +497,15 @@ header {
     }
 
     .card_time {
-        width: 40%;
-        margin-left: 55%;
+        width: 30%;
+        margin-left: 58%;
         position: relative;
-        bottom: 8px;
+        bottom: 33px;
+        height: auto
+    }
+
+    .card_time h3 {
+        font-size: 10px;
     }
 
     .points1 {
@@ -541,4 +521,9 @@ header {
         height: 20px;
     }
 
+    .points1 {
+        height: 40px;
+        position: relative;
+        right: 100px;
+    }
 }
